@@ -6,6 +6,9 @@ Revision history for Perl extension Module::Build.
 
  - Skip ppm.t if Pod::HTML is not available
 
+ - Ensure bundle_inc.t doesn't accidentally uninstall the installed M::B
+   during testing if the user had 'uninst=1' set during Build.PL
+
 0.35_13 - Sat Dec  5 11:26:36 EST 2009
 
  Bug fixes:
